# cdsync

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  MISSION.md  NEXT.md  db.sh  docker-compose.e2e.yml  run_staging_cdc_setup.sh
.github/workflows/: ci.yml  release.yml
deploy/config/: cdsync-app.production.template.toml  cdsync-app.staging.template.toml  cdsync-app.tables.generated.toml  cdsync-nora.production.template.toml  cdsync-nora.tables.generated.toml
deploy/ecs/: cdsync-staging-oneoff-taskdef.template.json  cdsync-staging-oneoff.sh  run-staging-oneoff.sh
deploy/fivetran/: export_connection_schema.sh  generate_cdsync_app_templates.py
docker/: Dockerfile.runner
docs/: TODO.md  cdc-internal-role-architecture.md  config-reload-plan.md  e2e.md  how-cdsync-works.md  operations.md  phased-migration-plan.md  staging-oneoff-ecs.md
migrations/state/: 0001_init.sql  0003_cdc_coordinator_state.sql
migrations/stats/: 0001_init.sql
scripts/: package-release.sh
sql/: staging_cdc_setup.sql
src/: admin_api.rs  config.rs  dotenv.rs  lib.rs  main.rs  main_tests.rs  monitor.rs  ops.rs  state.rs  stats.rs  telemetry.rs  tls.rs  types.rs
src/admin_api/: route_tests.rs
src/destinations/: bigquery.rs  etl_bigquery.rs  mod.rs
src/sources/: mod.rs  postgres.rs  (+1 more)
tests/: e2e_postgres_bigquery.rs  e2e_postgres_bigquery_real.rs  e2e_postgres_bigquery_real_cdc.rs  e2e_postgres_cdc.rs  e2e_postgres_schema_changes.rs  e2e_postgres_soft_deletes.rs  e2e_runner_graceful_shutdown.rs  salesforce_rate_limit.rs  state_store_integration.rs  stats_db_integration.rs
(+16 files in other folders)
