[package]
name = "cdsync"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
anyhow = "1"
base64 = "0.22"
bigdecimal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
etl = { git = "https://github.com/supabase/etl", package = "etl", default-features = false }
etl-postgres = { git = "https://github.com/supabase/etl", package = "etl-postgres", default-features = false, features = ["replication"] }
futures = "0.3"
gcloud-bigquery = "1.5.0"
globset = "0.4"
hex = "0.4"
polars = { version = "0.51.0", features = ["lazy", "dtype-datetime", "dtype-date", "dtype-decimal", "json"] }
postgres-replication = { git = "https://github.com/MaterializeInc/rust-postgres", rev = "c4b473b478b3adfbf8667d2fbe895d8423f1290b" }
reqwest = { version = "0.12", features = ["json"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "json", "bigdecimal"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
url = "2"
urlencoding = "2"

[profile.release]
overflow-checks = true

[dev-dependencies]
wiremock = "0.6"
